--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     
   </head>  
   <body>
-      <h1>Lab Four</h1>
-      <h5>Shahzad Manji</h5>
+      <h2>Wealth & Health of Nations</h2>
+      <h5>Inspired by Hans Rosling's Gapminder</h5>
       <div class = "chart"></div>
+      <div class = "tooltip"></div>
   </body>
